--- a/Application/index.html
+++ b/Application/index.html
@@ -74,7 +74,7 @@
           <h4><u>Lacks Healthcare vs Average Age</u></h4>
           <p>There is no correlation between Age and Lacks Healthcare.</p>
           
-          <h4><u>Lacks Healthcare vs Average Household Income</h4>
+          <h4><u>Lacks Healthcare vs Average Household Income</u></h4>
           <p>There is a very slight correlation between Lacks Healthcare vs Household 
             Income rates. States.</p>
         </div>
