--- a/Application/index.html
+++ b/Application/index.html
@@ -38,7 +38,7 @@
           <h4><u>Obesity vs Poverty</u></h4>
           <p>There is a general trend between Obesity and Poverty. Th states with higher 
             Poverty rtes tend to be slightly more obese. The states with high Poverty 
-            rates and high Obesity rates tend to be in teh Southeastern part of the US.</p>
+            rates and high Obesity rates tend to be in the Southeastern part of the US.</p>
 
           <h4><u>Obesity vs Average Age</u></h4>
           <p>There does not seem to be a correlation between Obesity and Average Age.</p>
